<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reddit Reader</string>
    <string name="title_section1">Hot</string>
    <string name="title_section2">New</string>
    <string name="title_section3">Rising</string>
    <string name="title_section4">Controversial</string>
    <string name="title_section5">Top</string>
    <string name="title_section6">Gilded</string>
    <string name="title_section7">Promoted</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="search_hint">Search</string>
    <string name="submitted_by">Submitted By</string>
    <string name="no_results_found">No Results Found</string>
    <string name="pref_account">Reddit Account (Coming soon)</string>
    <string name="pref_customise">Customise (Coming soon)</string>
    <string name="pref_login">Login</string>
    <string name="pref_auto_referesh">Auto Refresh</string>
    <string name="pref_customise_subreddits">Customise Subreddits</string>
    <string name="pref_refresh_interval">Refresh Interval</string>
    <string name="pref_font_size">Font Size</string>

    <string-array name="pref_refresh_intervals">
        <item>30 sec</item>
        <item>45 sec</item>
        <item>1 min</item>
        <item>2 mins</item>
    </string-array>
    <string-array name="pref_font_sizes">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

</resources>