<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.m.reddit.reader.Front" >

    <item
        android:id="@+id/action_refresh"
        android:showAsAction="always"
        android:icon="@drawable/ic_navigation_refresh"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_search"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_overflow"
        android:showAsAction="always"
        android:icon="@drawable/ic_core_overflow"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_settings"
                android:showAsAction="never"
                android:title="@string/action_settings" 
                />
        </menu>
    </item>

</menu>
